--- a/src/Components/ReportBuilder/ReportBuilder.scss
+++ b/src/Components/ReportBuilder/ReportBuilder.scss
@@ -6,6 +6,7 @@
         width: calc(22% - 4px);
         height: 100%;
         float: left;
+        overflow: auto;
     }
 
     .report-display-cntr {
