--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,55 @@
-.report-builder-container{
-width:100%;
-height: 100vh;
+.report-builder-container {
+    width: 100%;
+    height: 100vh;
+}
+
+.table-bordered {
+    border: 1px solid #ddd;
+}
+
+.table {
+    background-color: #fff;
+    font-family: "Open Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #151b1e;
+}
+
+.table > thead > tr {
+    background: #ebedf0;
+    color: #56688a;
+    font-size: 12px;
+}
+
+.table-bordered thead th,
+.table-bordered thead td {
+    border-bottom-width: 2px;
+}
+
+.table thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #a4b7c1;
+}
+
+.table td,
+.table th {
+    border-color: #d9d9d9 !important;
+    border-top: 1px solid #e5e5e5;
+    border-width: 1px;
+    vertical-align: middle !important;
+    padding: 8px;
+}
+
+.table-bordered th,
+.table-bordered td {
+    border: 1px solid #a4b7c1;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.table > tbody > tr > th,
+.table > tbody > tr > td {
+    padding: 0 4px 0 6px !important;
 }
