--- a/src/Components/ReportBuilder/ReportDisplay/ReportDisplay.scss
+++ b/src/Components/ReportBuilder/ReportDisplay/ReportDisplay.scss
@@ -1,5 +1,12 @@
 .report-display {
     width: 100%;
+    height: 100%;
+
+    .drop-grp {
+        width: 100%;
+        height: 100%;
+        padding-bottom: 50px;
+    }
 
     .message-no-items {
         width: 100%;
