--- a/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
+++ b/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
@@ -3,8 +3,14 @@
         border: 3px solid #217346;
     }
 
+    &:first-child {
+        .header-cntr {
+            position: absolute;
+        }
+    }
+
     .header-cntr {
-        position: absolute;
+        position: relative;
         width: 300px;
     }
 
@@ -16,7 +22,7 @@
         border: 1px solid grey;
         position: absolute;
         width: 250px;
-        top: -28px;
+        top: -25px;
         background-color: lightyellow;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
