--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -23,6 +23,12 @@ body {
         }
     }
 
+    .p-dialog {
+        .p-dialog-content {
+            padding: 0 !important;
+        }
+    }
+
     /*.p-dialog {
         border-radius: 3px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
