--- a/src/Components/Common/JsonTree.scss
+++ b/src/Components/Common/JsonTree.scss
@@ -14,6 +14,7 @@
         .text {
             width: 100%;
             cursor: move;
+            word-break: break-all;
 
             i.togglable {
                 cursor: pointer;
