--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -29,6 +29,16 @@ body {
         }
     }
 
+    div.field-collection {
+        & > div {
+            padding: 5px;
+
+            label {
+                margin-right: 5px;
+            }
+        }
+    }
+
     /*.p-dialog {
         border-radius: 3px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
