Implemented Chart control, Tab view & tab page control + other container controls,  fixed minor issues with style editor.

--- a/src/Components/ReportBuilder/ReportControls/Dataset.scss
+++ b/src/Components/ReportBuilder/ReportControls/Dataset.scss
@@ -33,5 +33,9 @@
                 border-bottom: 1px solid grey;
             }
         }
+
+        .p-button {
+            margin: 0 2px;
+        }
     }
 }
