Rendering of image,chart, tab view,container and panel items implemented, fixes done in saving property & expression editor.

--- a/src/Components/ReportBuilder/ReportItems/Grid/Grid.scss
+++ b/src/Components/ReportBuilder/ReportItems/Grid/Grid.scss
@@ -94,17 +94,8 @@
 
 .jsr-expr-container {
     width: 100%;
-
-    .status {
-        font-size: 20px;
-        width: 18px;
-        font-style: italic;
-        float: left;
-    }
-
     .field {
-        width: calc(100% - 19px);
-        display: inline-block;
+        width: 100%;
 
         textarea {
             width: 100%;
