Minor fixes done

--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -80,6 +80,11 @@ body {
         margin-right: 8px !important;
     }
 
+    .report-item-tbl {
+        width: 100%;
+        overflow: auto;
+    }
+
     /*.p-dialog {
         border-radius: 3px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
