Fixes done in input parameter data set resolving and report state related implementation done.

--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -26,6 +26,9 @@ body {
     .p-dialog {
         .p-dialog-content {
             padding: 0 !important;
+            max-height: 75vh;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
     }
 
