--- a/src/Components/ReportBuilder/ReportControls/ReportControls.scss
+++ b/src/Components/ReportBuilder/ReportControls/ReportControls.scss
@@ -18,9 +18,13 @@
 }
 
 .builtin-fields {
+    .header {
+        font-weight: bold;
+        padding: 3px 0px;
+    }
     .field {
         cursor: move;
-        padding: 3px 0px;
+        padding: 3px 0px 3px 8px;
     }
 }
 
