Drag and drop support added within report display and containers. Removed use of report fragments and added empty tags instead,

--- a/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
+++ b/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
@@ -1,15 +1,15 @@
+.cmp-drg:first-child {
+    & > .component > .header-cntr {
+        position: absolute;
+    }
+}
+
 .component {
     &.selected {
         border: 3px solid #217346;
     }
 
-    &:first-child {
-        .header-cntr {
-            position: absolute;
-        }
-    }
-
-    .header-cntr {
+    & > .header-cntr {
         position: relative;
         width: 300px;
     }
