--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -88,6 +88,10 @@ body {
         overflow: auto;
     }
 
+    .cr-move {
+        cursor: move;
+    }
+
     /*.p-dialog {
         border-radius: 3px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
