Issue with drag and drop resolved and created common component to be reused for sorting.

--- a/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
+++ b/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
@@ -1,6 +1,12 @@
-.cmp-drg:first-child {
-    & > .component > .header-cntr {
+.drop-grp > .component:first-child {
+    & > .header-cntr {
         position: absolute;
+    }
+}
+
+.drop-grp{
+    .drop-grp{
+        position: relative;
     }
 }
 
