--- a/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
+++ b/src/Components/ReportBuilder/ReportItems/ReportItemBase.scss
@@ -1,4 +1,4 @@
-.drop-grp > .component:first-child {
+/*.drop-grp > .component:first-child {
     & > .header-cntr {
         position: absolute;
     }
@@ -8,27 +8,27 @@
     .drop-grp{
         position: relative;
     }
-}
+}*/
 
 .component {
     &.selected {
         border: 3px solid #217346;
     }
 
-    & > .header-cntr {
+    /*& > .header-cntr {
         position: relative;
         width: 300px;
-    }
+    }*/
 
     .header {
         height: 25px;
-        display: none;
+        /*display: none;
+        position: absolute;
+        top: -25px;
+        width: 250px;*/
         padding: 2px 10px;
         cursor: move;
         border: 1px solid grey;
-        position: absolute;
-        width: 250px;
-        top: -25px;
         background-color: lightyellow;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
@@ -42,9 +42,9 @@
         }
     }
 
-    &:hover {
+    /*&:hover {
         .header {
             display: block;
         }
-    }
+    }*/
 }
