Used scrollable table for generating reports

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,11 @@
 }
 
 .table-bordered {
-    border: 1px solid #ddd;
+    border: 1px solid #c8ced3;
+}
+
+table {
+    border-collapse: collapse;
 }
 
 .table {
