Fixed expression parser issue due to async implementation. Added Text report item component

--- a/src/Components/ReportBuilder/ReportControls/ReportControls.scss
+++ b/src/Components/ReportBuilder/ReportControls/ReportControls.scss
@@ -7,10 +7,11 @@
 
     .p-accordion {
         .p-accordion-header {
-            & > a {
+            &>a {
                 padding: 0.229em 0.2em;
             }
         }
+
         .p-accordion-header-text {
             width: 90%;
         }
@@ -22,7 +23,8 @@
         font-weight: bold;
         padding: 3px 0px;
     }
-    .field {
+
+    .r-field {
         cursor: move;
         padding: 3px 0px 3px 8px;
     }
@@ -33,6 +35,7 @@
         .header {
             font-weight: bold;
         }
+
         .list {
             padding-left: 20px;
 
