--- a/src/lib/theme.scss
+++ b/src/lib/theme.scss
@@ -1,4 +1,5 @@
 body {
+
     .p-tabview.p-tabview-top .p-tabview-nav li.p-highlight a,
     .p-tabview.p-tabview-top .p-tabview-nav li.p-highlight:hover a {
         background: #fff;
@@ -35,13 +36,13 @@ body {
     div.no-padding {
         padding: 0 !important;
 
-        & > .p-accordion-content {
+        &>.p-accordion-content {
             padding: 0 !important;
         }
     }
 
     div.field-collection {
-        & > div {
+        &>div {
             padding: 5px;
 
             label {
@@ -49,7 +50,8 @@ body {
             }
         }
     }
-    div.mandatory > label:before,
+
+    div.mandatory>label:not([for]):before,
     label.mandatory:before {
         content: "*";
         color: red;
